# wcu_course_db

./: .gitignore  Cargo.toml  README.md  courses.json
.github/workflows/: refresh.yml
src/: course.rs  fetch.rs  graph.rs  main.rs
