[package]
name = "wcu_course_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.7"
regex = "1.10.2"
reqwest = { version = "0.11.22", default-features = false, features = [
    "rustls-tls",
] }
reqwest-middleware = "0.2.3"
reqwest-retry = "0.3.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
